--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ cmake_minimum_required(VERSION 3.16)
 project(CudaCProgramming LANGUAGES C CXX CUDA)
 
 set(CMAKE_CUDA_ARCHITECTURES 80)
+set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
 
