--- a/c01/CMakeLists.txt
+++ b/c01/CMakeLists.txt
@@ -19,3 +19,5 @@ add_executable(c01_kernel_timer_chrono c01_kernel_timer_chrono.cu)
 add_executable(c01_kernel_timer_cudaEvent c01_kernel_timer_cudaEvent.cu)
 add_executable(c01_kernel_organize_thread c01_organize_thread.cu)
 add_executable(c01_matrix_sum_2dgrid_2dblock c01_matrix_sum_2dgrid_2dblock.cu)
+add_executable(c01_device_management c01_device_management.cu)
+add_executable(c01_nvidia_smi c01_nvidia_smi.cpp)
