--- a/c01/CMakeLists.txt
+++ b/c01/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(c01_kernel_organize_thread c01_organize_thread.cu)
 add_executable(c01_matrix_sum_2dgrid_2dblock c01_matrix_sum_2dgrid_2dblock.cu)
 add_executable(c01_device_management c01_device_management.cu)
 add_executable(c01_nvidia_smi c01_nvidia_smi.cpp)
+add_executable(c01_warp_divergence c01_warp_deivergence.cu)
