--- a/c04/CMakeLists.txt
+++ b/c04/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(c04_static_global_mem static_global_mem.cu)
 add_executable(unified_mem unified_mem.cu)
 add_executable(cudaMalloc cudaMalloc.cu)
+add_executable(cudaHostMalloc cudaHostMalloc.cu)
