--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_subdirectory(asm)
 add_subdirectory(intrinsics)
 add_subdirectory(nvidia_cuda_api)
 add_subdirectory(quantization)
+
+add_subdirectory(utils)
 ##set_target_properties(CudaCProgramming PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 #
 #add_executable(sumArrayOnHost sumArrayOnHost.cu)
