--- a/c04/CMakeLists.txt
+++ b/c04/CMakeLists.txt
@@ -2,3 +2,6 @@ add_executable(c04_static_global_mem static_global_mem.cu)
 add_executable(unified_mem unified_mem.cu)
 add_executable(cudaMalloc cudaMalloc.cu)
 add_executable(cudaHostMalloc cudaHostMalloc.cu)
+
+add_executable(mem_accesse_mode mem_access_mode.cu)
+add_executable(unaligned_mem_access unaligned_mem_access.cu)
