--- a/c04/CMakeLists.txt
+++ b/c04/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(mem_accesse_mode mem_access_mode.cu)
 add_executable(unaligned_mem_access unaligned_mem_access.cu)
 add_executable(read_only_mem read_only_cache.cu)
 add_executable(unaligned_mem_write unaligned_mem_write.cu)
+
+add_executable(AoS AoS.cu)
+add_executable(SoA SoA.cpp)
