--- a/intrinsics/CMakeLists.txt
+++ b/intrinsics/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(double_precision)
 add_executable(vmins2 vmins2.cu)
 add_executable(vmins4 vmins4.cu)
 add_executable(vabsss2 vabsss2.cu)
+
+add_executable(saturatef saturatef.cu)
