--- a/c05/CMakeLists.txt
+++ b/c05/CMakeLists.txt
@@ -3,3 +3,5 @@ target_compile_options(block_expand PUBLIC -g -G -O0)
 
 
 add_executable(transpose transpose.cu)
+
+add_executable(shuffle_instruction shuffle_instruction.cu)
